<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:onClick="onNavigationClick"
            android:id="@+id/llHome"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_home_black" />
            <TextView
                android:padding="10dp"
                android:id="@+id/txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_1"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:onClick="onNavigationClick"
            android:id="@+id/llAbout"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img2"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_smartphone_black_24dp"/>
            <TextView
                android:padding="10dp"
                android:id="@+id/abouttxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_2"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:onClick="onNavigationClick"
            android:id="@+id/llService"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img3"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_wc_black_24dp"/>
            <TextView
                android:padding="10dp"
                android:id="@+id/serivcetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_3"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llRepair"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img4"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_local_dining_black_24dp"/>
            <TextView
                android:padding="10dp"
                android:id="@+id/repairtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_4"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:onClick="onNavigationClick"
            android:id="@+id/llInsurance"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img5"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_book_black_24dp"/>
            <TextView
                android:padding="10dp"
                android:id="@+id/Insurancetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_5"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@drawable/background"
            android:layout_height="1dp"/>
        <LinearLayout
            android:onClick="onNavigationClick"
            android:id="@+id/llcontact"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img6"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_more_black_24dp"/>
            <TextView
                android:padding="10dp"
                android:id="@+id/Contacttxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_6"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@drawable/background"
            android:layout_height="1dp"/>
        <LinearLayout
            android:onClick="onNavigationClick"
            android:id="@+id/llcart"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img7"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_shopping_basket_black_24dp"/>
            <TextView
                android:padding="10dp"
                android:id="@+id/Profiletxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_cart"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:onClick="onNavigationClick"
            android:id="@+id/llbook"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img8"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_favorite_black_24dp"/>
            <TextView
                android:padding="10dp"
                android:id="@+id/bookingtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_wishlist"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:onClick="onNavigationClick"
            android:id="@+id/llvouch"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img9"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_card_giftcard_black_24dp"/>
            <TextView
                android:padding="10dp"
                android:id="@+id/vouchtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_rewards"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@drawable/background"
            android:layout_height="1dp"/>

        <LinearLayout
            android:onClick="onNavigationClick"
            android:id="@+id/llSignot"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img10"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_log_out"/>
            <TextView
                android:padding="10dp"
                android:id="@+id/Signouttxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Out"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>